--- a/1_regression.ipynb
+++ b/1_regression.ipynb
@@ -2166,7 +2166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if balance depends by income and the fact that you are a student but also depends by income differently, depending on whether one is a student or not?\n",
+    "What if `Balance` depends by `Income` differently, depending on whether one is a `Student` or not?\n",
     "\n",
     "Consider the following model:\n",
     "\n",
