--- a/3_nonparametric.ipynb
+++ b/3_nonparametric.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "## Labs\n",
     "\n",
-    "- [Non-linear Modeling](#7.8-Non-linear-Modeling)"
+    "- [Non-linear Modeling](#Lab-1:-Non-linear-Modeling)"
    ]
   },
   {
@@ -1936,7 +1936,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.8 Non-linear Modeling"
+    "## Lab 1: Non-linear Modeling"
    ]
   },
   {
@@ -1960,7 +1960,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.8.1 Polynomial Regression and Step Functions"
+    "### Lab 1.1: Polynomial Regression and Step Functions"
    ]
   },
   {
@@ -2286,7 +2286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.8.2 Splines"
+    "### Lab 1.2: Splines"
    ]
   },
   {
@@ -2417,7 +2417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jump to [Session 4 - Complexity and Regularization](https://nbviewer.jupyter.org/github/matteocourthoud/Machine-Learning-for-Economic-Analysis-2020/blob/master/4_regularization.ipynb)"
+    "Jump to [Session 4 - Cross-validation and the Bootstrap](https://nbviewer.jupyter.org/github/matteocourthoud/Machine-Learning-for-Economic-Analysis-2020/blob/master/4_crossvalidation.ipynb)"
    ]
   }
  ],
