--- a/1_regression.ipynb
+++ b/1_regression.ipynb
@@ -3314,6 +3314,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Labs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lab 1: Linear Regression"
    ]
   },
@@ -3498,7 +3505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simple Linear Regression"
+    "### Lab 1.1: Simple Linear Regression"
    ]
   },
   {
@@ -3918,7 +3925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Multiple Linear Regression"
+    "###  Lab 1.2: Multiple Linear Regression"
    ]
   },
   {
@@ -4362,7 +4369,7 @@
     "collapsed": true
    },
    "source": [
-    "### Interaction Terms"
+    "### Lab 1.3: Interaction Terms"
    ]
   },
   {
@@ -4490,7 +4497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Non-linear Transformations of the Predictors"
+    "### Lab 1.4: Non-linear Transformations of the Predictors"
    ]
   },
   {
@@ -4988,7 +4995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Qualitative Predictors"
+    "### Lab 1.5: Qualitative Predictors"
    ]
   },
   {
