--- a/4_crossvalidation.ipynb
+++ b/4_crossvalidation.ipynb
@@ -18,10 +18,7 @@
     "\n",
     "## Labs\n",
     "\n",
-    "- [The Validation Set Approach](The-Validation-Set-Approach)\n",
-    "- [Leave-One-Out Cross-Validation](Leave-One-Out-Cross-Validation)\n",
-    "- [k-Fold Cross-Validation](k-Fold-Cross-Validation)\n",
-    "- [The Bootstrap](The-Bootstrap)"
+    "- [Cross-Validation and the Bootstrap](#Lab-1:-Cross-Validation-and-the-Bootstrap)"
    ]
   },
   {
@@ -522,14 +519,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Labs"
+    "# Labs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Validation Set Approach"
+    "## Lab 1: Cross-Validation and the Bootstrap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lab 1.1: The Validation Set Approach"
    ]
   },
   {
@@ -728,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3.2 Leave-One-Out Cross-Validation"
+    "### Lab 1.2:  Leave-One-Out Cross-Validation"
    ]
   },
   {
@@ -803,7 +807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### k-Fold Cross-Validation"
+    "### Lab 1.3: k-Fold Cross-Validation"
    ]
   },
   {
@@ -930,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Bootstrap"
+    "### Lab 1.4: The Bootstrap"
    ]
   },
   {
@@ -1279,6 +1283,20 @@
     "Xsamp, ysamp = resample(X, y, n_samples=1000)\n",
     "clf = lm.fit(Xsamp,ysamp)\n",
     "print('Intercept: ' + str(clf.intercept_) + \" Coef: \" + str(clf.coef_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Session"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jump to [Session 5 - Model Selection and Regularization](https://nbviewer.jupyter.org/github/matteocourthoud/Machine-Learning-for-Economic-Analysis-2020/blob/master/5_regularization.ipynb)"
    ]
   }
  ],
