--- a/5_regularization.ipynb
+++ b/5_regularization.ipynb
@@ -60,11 +60,12 @@
     "# Set global parameters\n",
     "%matplotlib inline\n",
     "plt.style.use('seaborn-white')\n",
-    "plt.rcParams['figure.figsize'] = (8,5)\n",
+    "plt.rcParams['lines.linewidth'] = 3\n",
+    "plt.rcParams['figure.figsize'] = (10,6)\n",
     "plt.rcParams['figure.titlesize'] = 20\n",
     "plt.rcParams['axes.titlesize'] = 18\n",
-    "plt.rcParams['axes.labelsize'] = 12\n",
-    "plt.rcParams['legend.fontsize'] = 12"
+    "plt.rcParams['axes.labelsize'] = 14\n",
+    "plt.rcParams['legend.fontsize'] = 14"
    ]
   },
   {
