--- a/10_unsupervised.ipynb
+++ b/10_unsupervised.ipynb
@@ -25,14 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load ../standard_import.txt\n",
+    "# Import\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib as mpl\n",
     "import seaborn as sns\n",
     "\n",
     "from sklearn.preprocessing import scale\n",
@@ -54,11 +53,12 @@
     "# Set global parameters\n",
     "%matplotlib inline\n",
     "plt.style.use('seaborn-white')\n",
-    "plt.rcParams['figure.figsize'] = (8,5)\n",
+    "plt.rcParams['lines.linewidth'] = 3\n",
+    "plt.rcParams['figure.figsize'] = (10,6)\n",
     "plt.rcParams['figure.titlesize'] = 20\n",
     "plt.rcParams['axes.titlesize'] = 18\n",
-    "plt.rcParams['axes.labelsize'] = 12\n",
-    "plt.rcParams['legend.fontsize'] = 12"
+    "plt.rcParams['axes.labelsize'] = 14\n",
+    "plt.rcParams['legend.fontsize'] = 14"
    ]
   },
   {
