--- a/7_trees.ipynb
+++ b/7_trees.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 8 - Tree-based Methods"
+    "# Session 7 - Tree-based Methods"
    ]
   },
   {
