--- a/3_nonparametric.ipynb
+++ b/3_nonparametric.ipynb
@@ -2301,16 +2301,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Generalized additive models (GAMs) provide a general framework for extending a standard linear model by allowing non-linear functions of each of the variables, while maintaining additivity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GAM for Regression Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Imagine to extend the general regression framework to some separabily additive model of the form\n",
     "\n",
     "$$\n",
-    "y_i = \\beta_0 + \\sum_{k=1}^K \\beta_k f(x_{ik}) + \\varepsilon_i\n",
-    "$$"
+    "y_i = \\beta_0 + \\sum_{k=1}^K \\beta_k f_k(x_{ik}) + \\varepsilon_i\n",
+    "$$\n",
+    "\n",
+    "It is called an additive model because we calculate a separate $f_k$ for each $X_k$, and then add together all of their contributions.\n",
+    "\n",
+    "Consider for example the following model\n",
+    "\n",
+    "$$\n",
+    "\\text{wage} = \\beta_0 + f_1(\\text{year}) + f_2(\\text{age}) + f_3(\\text{education}) + \\varepsilon\n",
+    "$$\n",
+    "\n",
+    "We are going to use the following functions:\n",
+    "\n",
+    "- $f_1$: natural spline with 8 degrees of freedom\n",
+    "- $f_2$: natural spline with 10 degrees of freedom\n",
+    "- $f_3$: step function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -2336,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2368,8 +2396,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we move on, let us summarize the advantages of a GAM.\n",
+    "\n",
+    "- GAMs allow us to fit a non-linear $f_k$ to each $X_k$, so that we can automatically model non-linear relationships that standard linear regression will miss\n",
+    "- The non-linear fits can potentially make more accurate predictions\n",
+    "- Because the model is additive, we can still examine the effect of each $X_k$ on $Y$ separately\n",
+    "- The smoothness of the function $f_k$ for the variable $X_k$ can be summarized via degrees of freedom.\n",
+    "\n",
+    "\n",
+    "The main limitation of GAMs is that the model is restricted to be additive. With many variables, important interactions can be missed. However, as with linear regression, we can manually add interaction terms to the GAM model by including additional predictors of the form Xj × Xk. In addition we can add low-dimensional interaction functions of the form fjk(Xj,Xk) into the model; such terms can be fit using two-dimensional smoothers such as local regression, or two-dimensional splines (not covered here)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GAMs for Classification Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a\n",
+    "We can do the same with a binary dependent variable."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {
     "scrolled": false
    },
