--- a/3_nonparametric.ipynb
+++ b/3_nonparametric.ipynb
@@ -806,6 +806,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Which is remindful of \n",
+    "![Bonus](figures/nonlinearities.jpg \"Nonlinearities\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step Functions"
    ]
   },
@@ -2399,7 +2407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we move on, let us summarize the advantages of a GAM.\n",
+    "Before we move on, let us summarize the **advantages** of a GAM.\n",
     "\n",
     "- GAMs allow us to fit a non-linear $f_k$ to each $X_k$, so that we can automatically model non-linear relationships that standard linear regression will miss\n",
     "- The non-linear fits can potentially make more accurate predictions\n",
@@ -2407,7 +2415,7 @@
     "- The smoothness of the function $f_k$ for the variable $X_k$ can be summarized via degrees of freedom.\n",
     "\n",
     "\n",
-    "The main limitation of GAMs is that the model is restricted to be additive. With many variables, important interactions can be missed. However, as with linear regression, we can manually add interaction terms to the GAM model by including additional predictors of the form Xj × Xk. In addition we can add low-dimensional interaction functions of the form fjk(Xj,Xk) into the model; such terms can be fit using two-dimensional smoothers such as local regression, or two-dimensional splines (not covered here)."
+    "The main **limitation** of GAMs is that the model is restricted to be additive. With many variables, important interactions can be missed. However, as with linear regression, we can manually add interaction terms to the GAM model by including additional predictors of the form $X_j \\times X_k$. "
    ]
   },
   {
@@ -2421,13 +2429,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a\n",
-    "We can do the same with a binary dependent variable."
+    "We can use GAMs also with a binary dependent variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2449,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {
     "scrolled": false
    },
@@ -2480,6 +2487,13 @@
     "    if i == 0:\n",
     "        ax.set_ylim(-4,4)\n",
     "    ax.set_xlabel(titles[i]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results are qualitatively similar to the non-binary case."
    ]
   },
   {
