--- a/1_regression.ipynb
+++ b/1_regression.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4  180.8   10.8       58.4   12.9"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,32 +201,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 200 entries, 0 to 199\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   TV         200 non-null    float64\n",
-      " 1   Radio      200 non-null    float64\n",
-      " 2   Newspaper  200 non-null    float64\n",
-      " 3   Sales      200 non-null    float64\n",
-      "dtypes: float64(4)\n",
-      "memory usage: 6.4 KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TV</th>\n",
+       "      <th>Radio</th>\n",
+       "      <th>Newspaper</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>147.042500</td>\n",
+       "      <td>23.264000</td>\n",
+       "      <td>30.554000</td>\n",
+       "      <td>14.022500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>85.854236</td>\n",
+       "      <td>14.846809</td>\n",
+       "      <td>21.778621</td>\n",
+       "      <td>5.217457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>1.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>74.375000</td>\n",
+       "      <td>9.975000</td>\n",
+       "      <td>12.750000</td>\n",
+       "      <td>10.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>149.750000</td>\n",
+       "      <td>22.900000</td>\n",
+       "      <td>25.750000</td>\n",
+       "      <td>12.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>218.825000</td>\n",
+       "      <td>36.525000</td>\n",
+       "      <td>45.100000</td>\n",
+       "      <td>17.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>296.400000</td>\n",
+       "      <td>49.600000</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               TV       Radio   Newspaper       Sales\n",
+       "count  200.000000  200.000000  200.000000  200.000000\n",
+       "mean   147.042500   23.264000   30.554000   14.022500\n",
+       "std     85.854236   14.846809   21.778621    5.217457\n",
+       "min      0.700000    0.000000    0.300000    1.600000\n",
+       "25%     74.375000    9.975000   12.750000   10.375000\n",
+       "50%    149.750000   22.900000   25.750000   12.900000\n",
+       "75%    218.825000   36.525000   45.100000   17.400000\n",
+       "max    296.400000   49.600000  114.000000   27.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Overview of all variables\n",
     "advertising.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can have more information on the single varaibles using the function `decribe`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TV</th>\n",
+       "      <th>Radio</th>\n",
+       "      <th>Newspaper</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>147.042500</td>\n",
+       "      <td>23.264000</td>\n",
+       "      <td>30.554000</td>\n",
+       "      <td>14.022500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>85.854236</td>\n",
+       "      <td>14.846809</td>\n",
+       "      <td>21.778621</td>\n",
+       "      <td>5.217457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>1.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>74.375000</td>\n",
+       "      <td>9.975000</td>\n",
+       "      <td>12.750000</td>\n",
+       "      <td>10.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>149.750000</td>\n",
+       "      <td>22.900000</td>\n",
+       "      <td>25.750000</td>\n",
+       "      <td>12.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>218.825000</td>\n",
+       "      <td>36.525000</td>\n",
+       "      <td>45.100000</td>\n",
+       "      <td>17.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>296.400000</td>\n",
+       "      <td>49.600000</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               TV       Radio   Newspaper       Sales\n",
+       "count  200.000000  200.000000  200.000000  200.000000\n",
+       "mean   147.042500   23.264000   30.554000   14.022500\n",
+       "std     85.854236   14.846809   21.778621    5.217457\n",
+       "min      0.700000    0.000000    0.300000    1.600000\n",
+       "25%     74.375000    9.975000   12.750000   10.375000\n",
+       "50%    149.750000   22.900000   25.750000   12.900000\n",
+       "75%    218.825000   36.525000   45.100000   17.400000\n",
+       "max    296.400000   49.600000  114.000000   27.000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary of all variables\n",
+    "advertising.describe()"
    ]
   },
   {
@@ -1639,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1685,6 +1894,7 @@
     }
    ],
    "source": [
+    "# Summary\n",
     "credit.info()"
    ]
   },
@@ -1697,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1825,12 +2035,13 @@
        "4  Caucasian      331  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Look at data\n",
     "credit.head()"
    ]
   },
@@ -2236,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2253,46 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 392 entries, 0 to 396\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column        Non-Null Count  Dtype  \n",
-      "---  ------        --------------  -----  \n",
-      " 0   mpg           392 non-null    float64\n",
-      " 1   cylinders     392 non-null    int64  \n",
-      " 2   displacement  392 non-null    float64\n",
-      " 3   horsepower    392 non-null    float64\n",
-      " 4   weight        392 non-null    int64  \n",
-      " 5   acceleration  392 non-null    float64\n",
-      " 6   year          392 non-null    int64  \n",
-      " 7   origin        392 non-null    int64  \n",
-      " 8   name          392 non-null    object \n",
-      "dtypes: float64(4), int64(4), object(1)\n",
-      "memory usage: 30.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "auto.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Suppose we wanted to understand which car caracteristics are correlated with higher efficiency, i.e. `mpg` (miles per gallon)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2324,91 +2496,124 @@
        "      <th>acceleration</th>\n",
        "      <th>year</th>\n",
        "      <th>origin</th>\n",
-       "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>3504</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevrolet chevelle malibu</td>\n",
+       "      <th>count</th>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>3693</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>buick skylark 320</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>23.445918</td>\n",
+       "      <td>5.471939</td>\n",
+       "      <td>194.411990</td>\n",
+       "      <td>104.469388</td>\n",
+       "      <td>2977.584184</td>\n",
+       "      <td>15.541327</td>\n",
+       "      <td>75.979592</td>\n",
+       "      <td>1.576531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3436</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>plymouth satellite</td>\n",
+       "      <th>std</th>\n",
+       "      <td>7.805007</td>\n",
+       "      <td>1.705783</td>\n",
+       "      <td>104.644004</td>\n",
+       "      <td>38.491160</td>\n",
+       "      <td>849.402560</td>\n",
+       "      <td>2.758864</td>\n",
+       "      <td>3.683737</td>\n",
+       "      <td>0.805518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3433</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>amc rebel sst</td>\n",
+       "      <th>min</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>1613.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3449</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford torino</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>105.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>2225.250000</td>\n",
+       "      <td>13.775000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>22.750000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>151.000000</td>\n",
+       "      <td>93.500000</td>\n",
+       "      <td>2803.500000</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>275.750000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>3614.750000</td>\n",
+       "      <td>17.025000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>46.600000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>455.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>5140.000000</td>\n",
+       "      <td>24.800000</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    mpg  cylinders  displacement  horsepower  weight  acceleration  year  \\\n",
-       "0  18.0          8         307.0       130.0    3504          12.0    70   \n",
-       "1  15.0          8         350.0       165.0    3693          11.5    70   \n",
-       "2  18.0          8         318.0       150.0    3436          11.0    70   \n",
-       "3  16.0          8         304.0       150.0    3433          12.0    70   \n",
-       "4  17.0          8         302.0       140.0    3449          10.5    70   \n",
+       "              mpg   cylinders  displacement  horsepower       weight  \\\n",
+       "count  392.000000  392.000000    392.000000  392.000000   392.000000   \n",
+       "mean    23.445918    5.471939    194.411990  104.469388  2977.584184   \n",
+       "std      7.805007    1.705783    104.644004   38.491160   849.402560   \n",
+       "min      9.000000    3.000000     68.000000   46.000000  1613.000000   \n",
+       "25%     17.000000    4.000000    105.000000   75.000000  2225.250000   \n",
+       "50%     22.750000    4.000000    151.000000   93.500000  2803.500000   \n",
+       "75%     29.000000    8.000000    275.750000  126.000000  3614.750000   \n",
+       "max     46.600000    8.000000    455.000000  230.000000  5140.000000   \n",
        "\n",
-       "   origin                       name  \n",
-       "0       1  chevrolet chevelle malibu  \n",
-       "1       1          buick skylark 320  \n",
-       "2       1         plymouth satellite  \n",
-       "3       1              amc rebel sst  \n",
-       "4       1                ford torino  "
+       "       acceleration        year      origin  \n",
+       "count    392.000000  392.000000  392.000000  \n",
+       "mean      15.541327   75.979592    1.576531  \n",
+       "std        2.758864    3.683737    0.805518  \n",
+       "min        8.000000   70.000000    1.000000  \n",
+       "25%       13.775000   73.000000    1.000000  \n",
+       "50%       15.500000   76.000000    1.000000  \n",
+       "75%       17.025000   79.000000    2.000000  \n",
+       "max       24.800000   82.000000    3.000000  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,7 +2626,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the relationship between `mpg` and `horsepower`. It might be a highly non-linear relationship.\n",
+    "Suppose we wanted to understand which car caracteristics are correlated with higher efficiency, i.e. `mpg` (miles per gallon).\n",
+    "\n",
+    "Consider in particular the relationship between `mpg` and `horsepower`. It might be a highly non-linear relationship.\n",
     "\n",
     "$$\n",
     "\\text{mpg} ≈ \\beta_0 + \\beta_1 \\text{horsepower} + \\beta_2 \\text{horsepower}^2 + ... ???\n",
