--- a/4_crossvalidation.ipynb
+++ b/4_crossvalidation.ipynb
@@ -439,9 +439,10 @@
     "We are now going to assess its usefulness through simulation. Take the following model:\n",
     "\n",
     "$$\n",
-    "y_i = 0.6 * x_i + \\varepsilon_i\n",
+    "y_i = \\beta_0 * x_i + \\varepsilon_i\n",
     "$$\n",
-    "\n"
+    "\n",
+    "where $\\beta_0 = 0.6$ and $\\varepsilon \\sim N(0,1)$. We are now going to assess the variance of the OLS estimator $\\hat \\beta$ with the standard formula, simulating different samples and with bootstrap."
    ]
   },
   {
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -510,6 +511,7 @@
      "text": [
       "True value      : 0.6000\n",
       "Mean Simulations: 0.6003\n",
+      "Mean One Sample : 0.5815\n",
       "Mean Boostrap   : 0.5816\n"
      ]
     }
@@ -518,6 +520,7 @@
     "# Print means\n",
     "print('True value      : %.4f' % beta_0)\n",
     "print('Mean Simulations: %.4f' % np.mean(beta_sim))\n",
+    "print('Mean One Sample : %.4f' % beta_sim[-1])\n",
     "print('Mean Boostrap   : %.4f' % np.mean(beta_boot))"
    ]
   },
@@ -532,24 +535,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True std       : 0.0107\n",
-      "Std Simulations: 0.0108\n",
-      "Std Boostrap   : 0.0108\n"
+      "True std       : 0.010737\n",
+      "Std Simulations: 0.010830\n",
+      "Std One Sample : 0.010536\n",
+      "Std Boostrap   : 0.010812\n"
      ]
     }
    ],
    "source": [
     "# Print variances\n",
-    "print('True std       : %.4f' % np.sqrt(inv(X.T @ X)))\n",
-    "print('Std Simulations: %.4f' % np.std(beta_sim))\n",
-    "print('Std Boostrap   : %.4f' % np.std(beta_boot))"
+    "print('True std       : %.6f' % np.sqrt(inv(X.T @ X)))\n",
+    "print('Std Simulations: %.6f' % np.std(beta_sim))\n",
+    "print('Std One Sample : %.6f' % np.sqrt(inv(X.T @ X) * np.var(y - beta_sim[-1]*X)))\n",
+    "print('Std Boostrap   : %.6f' % np.std(beta_boot))"
    ]
   },
   {
