--- a/3_nonparametric.ipynb
+++ b/3_nonparametric.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>year</th>\n",
        "      <th>age</th>\n",
        "      <th>sex</th>\n",
@@ -114,8 +113,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>231655</td>\n",
+       "      <th>231655</th>\n",
        "      <td>2006</td>\n",
        "      <td>18</td>\n",
        "      <td>1. Male</td>\n",
@@ -130,8 +128,7 @@
        "      <td>75.043154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>86582</td>\n",
+       "      <th>86582</th>\n",
        "      <td>2004</td>\n",
        "      <td>24</td>\n",
        "      <td>1. Male</td>\n",
@@ -146,8 +143,7 @@
        "      <td>70.476020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>161300</td>\n",
+       "      <th>161300</th>\n",
        "      <td>2003</td>\n",
        "      <td>45</td>\n",
        "      <td>1. Male</td>\n",
@@ -166,29 +162,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  year  age      sex            maritl      race  \\\n",
-       "0      231655  2006   18  1. Male  1. Never Married  1. White   \n",
-       "1       86582  2004   24  1. Male  1. Never Married  1. White   \n",
-       "2      161300  2003   45  1. Male        2. Married  1. White   \n",
+       "        year  age      sex            maritl      race        education  \\\n",
+       "231655  2006   18  1. Male  1. Never Married  1. White     1. < HS Grad   \n",
+       "86582   2004   24  1. Male  1. Never Married  1. White  4. College Grad   \n",
+       "161300  2003   45  1. Male        2. Married  1. White  3. Some College   \n",
        "\n",
-       "         education              region        jobclass          health  \\\n",
-       "0     1. < HS Grad  2. Middle Atlantic   1. Industrial       1. <=Good   \n",
-       "1  4. College Grad  2. Middle Atlantic  2. Information  2. >=Very Good   \n",
-       "2  3. Some College  2. Middle Atlantic   1. Industrial       1. <=Good   \n",
+       "                    region        jobclass          health health_ins  \\\n",
+       "231655  2. Middle Atlantic   1. Industrial       1. <=Good      2. No   \n",
+       "86582   2. Middle Atlantic  2. Information  2. >=Very Good      2. No   \n",
+       "161300  2. Middle Atlantic   1. Industrial       1. <=Good     1. Yes   \n",
        "\n",
-       "  health_ins   logwage        wage  \n",
-       "0      2. No  4.318063   75.043154  \n",
-       "1      2. No  4.255273   70.476020  \n",
-       "2     1. Yes  4.875061  130.982177  "
+       "         logwage        wage  \n",
+       "231655  4.318063   75.043154  \n",
+       "86582   4.255273   70.476020  \n",
+       "161300  4.875061  130.982177  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data/Wage.csv')\n",
+    "df = pd.read_csv('data/Wage.csv', index_col=0)\n",
     "df.head(3)"
    ]
   },
@@ -1822,7 +1818,7 @@
     "fig.suptitle('Figure 7.7')\n",
     "\n",
     "# Plot\n",
-    "ax.scatter(X, y, facecolor='None', edgecolor='k', alpha=0.1)\n",
+    "ax.scatter(X, y, facecolor='None', edgecolor='k', alpha=0.2)\n",
     "ax.plot(age_grid, pred8, color='b', label='Polynomial')\n",
     "ax.plot(age_grid, pred9, color='r', label='Spline')\n",
     "ax.set_xlabel('age'); ax.set_ylabel('wage'); ax.legend();"
@@ -2095,7 +2091,8 @@
     "\n",
     "1. We select the focal point: $x_i=0.5$\n",
     "2. We select observations close to $\\ x_i$, i.e. $x_{\\text{close to i}} = \\{ x \\in X : |x_i - x| < 0.1 \\} \\ $ and $ \\ y_{\\text{close to i}} = \\{ y \\in Y : |x_i - x| < 0.1 \\}$\n",
-    "3. We are going to run a linear regression of $y_{\\text{close to i}}$ on $x_{\\text{close to i}}$"
+    "3. We apply gaussian weights\n",
+    "4. We run a weighted linear regression of $y_{\\text{close to i}}$ on $x_{\\text{close to i}}$"
    ]
   },
   {
