--- a/5_regularization.ipynb
+++ b/5_regularization.ipynb
@@ -761,7 +761,9 @@
     "- Bayesian Information Criterium (BIC)\n",
     "- Adjusted $R^2$\n",
     "\n",
-    "We are now going to test there metrics"
+    "The idea behind all these varaibles is to insert a penalty for the number of parameters used in the model. All these measure have theoretical fundations which are beyond the scope of this session.\n",
+    "\n",
+    "We are now going to test the three metrics"
    ]
   },
   {
@@ -858,7 +860,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we can see, all three metrics select more parsimonious models, with BIC being particularly conservative with only 4 varaibles and $R^2_{adj}$ selecting the righer model with 7 variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Shrinkage Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model selection methods constrained the number of varaibles *before* running a linear regression. Shrinkage methods attempt to do the two things simultaneously. In particular they *constrain* or *shrink* coefficients by imposing penalties in the objective functions for high values of the parameters."
    ]
   },
   {
@@ -872,22 +888,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The __glmnet__ algorithms in R optimize the objective function using cyclical coordinate descent, while scikit-learn Ridge regression uses linear least squares with L2 regularization. They are rather different implementations, but the general principles are the same.\n",
+    "The Least Squares Regression minimizes the Residual Sum of Squares\n",
     "\n",
-    "The __glmnet() function in R__ optimizes:\n",
-    "\n",
-    "$$ \n",
-    "\\frac{1}{N}|| X\\beta-y||^2_2+\\lambda\\bigg(\\frac{1}{2}(1−\\alpha)||\\beta||^2_2 \\ +\\ \\alpha||\\beta||_1\\bigg) \n",
+    "$$\n",
+    "\\mathrm{RSS}=\\sum_{i=1}^{n}\\left(y_{i}-\\beta_{0}-\\sum_{j=1}^{p} \\beta_{j} x_{i j}\\right)^{2}\n",
     "$$\n",
     "\n",
-    "(See R documentation and https://cran.r-project.org/web/packages/glmnet/vignettes/glmnet_beta.pdf)\n",
-    "The function supports L1 and L2 regularization. For just Ridge regression we need to use $\\alpha = 0 $. This reduces the above cost function to\n",
+    "The Ridge Regression objective function instead is\n",
     "\n",
-    "$$ \n",
-    "\\frac{1}{N}|| X\\beta-y||^2_2+\\frac{1}{2}\\lambda ||\\beta||^2_2 \n",
     "$$\n",
-    "    \n",
-    "The __sklearn Ridge()__ function optimizes:\n",
+    "\\sum_{i=1}^{n}\\left(y_{i}-\\beta_{0}-\\sum_{j=1}^{p} \\beta_{j} x_{i j}\\right)^{2}+\\lambda \\sum_{j=1}^{p} \\beta_{j}^{2}=\\mathrm{RSS}+\\lambda \\sum_{j=1}^{p} \\beta_{j}^{2}\n",
+    "$$\n",
+    "\n",
+    "where $\\lambda>0$ is a tuning parameter that regulates the extent to which large parameters are penalized. \n",
+    "\n",
+    "In matrix notation, the objective function is\n",
     "\n",
     "$$ \n",
     "||X\\beta - y||^2_2 + \\alpha ||\\beta||^2_2 \n",
@@ -897,7 +912,9 @@
     "\n",
     "$$ \n",
     "\\frac{1}{N}||X\\beta - y||^2_2 + \\frac{\\alpha}{N} ||\\beta||^2_2 \n",
-    "$$"
+    "$$\n",
+    "\n",
+    "We are now going to run Ridge Regression on the `Credit` dataset trying to explain account `Balance` with a set of observable individual characteristics."
    ]
   },
   {
@@ -912,6 +929,13 @@
     "X = pd.get_dummies(X, columns=categ_cols, drop_first=True)\n",
     "y = credit.loc[:,'Balance']\n",
     "n = len(credit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run ridge regression over a range of values for the penalty paramenter $\\lambda$."
    ]
   },
   {
@@ -932,6 +956,13 @@
     "    ridge.fit(scale(X), y)\n",
     "    coefs.append(ridge.coef_)\n",
     "coefs = np.reshape(coefs,(n_grid,-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use linear regression as a comparison."
    ]
   },
   {
